# product_inventory_git

./: .gitignore  Product_details.xlsx  README.md  product_details_data.json  pyproject.toml  requirements.txt
app/: main.py  models.py  product_data.py
db/: chroma.sqlite3
src/product_inventory/: crew.py  flows.py  llm.py  main.py  pydantic_model.py  run.py  test.py
src/product_inventory/config/: agents.yaml  tasks.yaml
src/product_inventory/data/: cart_output.json
src/product_inventory/tools/: custom_tool.py  db_setup.py
